--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      index
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
