--- a/Version2.0/index.html
+++ b/Version2.0/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vuedome</title>
     <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
+    <!-- <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=bwdwfM9pFbVUoKv03xojn9lEuG3BZPGL"></script> -->
   </head>
   <body>
     <div id="app"></div>
